selforg/build_final_test.log
g++ -c -Wall -pipe -fpic -I./. -I./controller -I./wirings -I./utils -I./matrix -I./statistictools -I./statistictools/measure -I./statistictools/dataanalysation -Iinclude -Iinclude/selforg -std=c++17 -pthread -I/Users/jerry/lpzrobots/include -I/opt/homebrew/Cellar/gsl/2.8/include -DNOCONFIGURATOR -g -O  -o "build/./agent.o" "agent.cpp"
In file included from agent.cpp:33:
In file included from ./wirings/abstractwiring.h:29:
./utils/noisegenerator.h:58:16: error: 'init' marked 'override' but does not override any member functions
   58 |   virtual void init(unsigned int dimension, RandGen* randGen = 0) override {
      |                ^
./utils/noisegenerator.h:81:16: error: 'add' marked 'override' but does not override any member functions
   81 |   virtual void add(double* value, double noiseStrength) override {
      |                ^
./utils/noisegenerator.h:87:24: error: 'getDimension' marked 'override' but does not override any member functions
   87 |   virtual unsigned int getDimension() const  override {
      |                        ^
./utils/noisegenerator.h:91:16: error: 'setDimension' marked 'override' but does not override any member functions
   91 |   virtual void setDimension(unsigned int dim) override {
      |                ^
./utils/noisegenerator.h:46:14: error: expected unqualified-id
   46 |     explicit if (this->ownRandGen && this->randGen) {
      |              ^
./utils/noisegenerator.h:82:51: error: use of undeclared identifier 'override'
   82 |     for (unsigned int i = 0; i < dimension; ++i)  override {
      |                                                   ^
./utils/noisegenerator.h:198:18: error: 'getTau' marked 'override' but does not override any member functions
  198 |   virtual double getTau() override {
      |                  ^
./utils/noisegenerator.h:201:16: error: 'setTau' marked 'override' but does not override any member functions
  201 |   virtual void setTau(double newTau) override {
      |                ^
./utils/noisegenerator.h:161:5: error: use of undeclared identifier 'sqrttau'
  161 |     sqrttau = sqrt(tau);
      |     ^
./utils/noisegenerator.h:162:5: error: use of undeclared identifier 'mean1channel'
  162 |     mean1channel = 0.0;
      |     ^
./utils/noisegenerator.h:172:14: error: expected unqualified-id
  172 |     explicit if (!mean) {
      |              ^
./utils/noisegenerator.h:176:51: error: use of undeclared identifier 'override'
  176 |     for (unsigned int i = 0; i < dimension; ++i)  override {
      |                                                   ^
./utils/noisegenerator.h:182:5: error: use of undeclared identifier 'mean1channel'
  182 |     mean1channel += sqrttau * uniform(-1, +1) - tau * mean1channel;
      |     ^
./utils/noisegenerator.h:182:21: error: use of undeclared identifier 'sqrttau'
  182 |     mean1channel += sqrttau * uniform(-1, +1) - tau * mean1channel;
      |                     ^
./utils/noisegenerator.h:182:55: error: use of undeclared identifier 'mean1channel'
  182 |     mean1channel += sqrttau * uniform(-1, +1) - tau * mean1channel;
      |                                                       ^
./utils/noisegenerator.h:183:13: error: use of undeclared identifier 'mean1channel'
  183 |     return (mean1channel);
      |             ^
./utils/noisegenerator.h:192:51: error: use of undeclared identifier 'override'
  192 |     for (unsigned int i = 0; i < dimension; ++i)  override {
      |                                                   ^
./utils/noisegenerator.h:204:7: error: use of undeclared identifier 'sqrttau'
  204 |       sqrttau = sqrt(tau);
      |       ^
./utils/noisegenerator.h:252:18: error: 'getTau' marked 'override' but does not override any member functions
  252 |   virtual double getTau() override {
      |                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [build/./agent.o] Error 1
